--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="container-fluid  main">
 
         <div class="row justify-content-center">
-            <div class="col-9 offset-1 text-center">
+            <div class="col-md-9 offset-md-1 text-center">
                 <img src="images/headerLogo.png" class="img img-fluid head-logo">
             </div>
-            <div class="col-2 pt-4 m-0 pb-0">
-                <p>на русском</p>
+            <div class="col-md-2 pt-4 m-0 pb-0">
+                <span>на русском</span>
             </div>
         </div>
 
@@ -77,7 +77,32 @@
         <!-- services section end -->
         
         <!-- implementations section start  -->
-        <!-- <div class="d-flex justify-content-center align-items-center">
+
+
+
+        <div class="d-flex justify-content-center">
+            <img src="images/sideLinesDark.svg" alt="">
+            <div class="implements-text " >
+                <div class="row implements-content">
+                    <div class="implements-heading ">
+                        <h3>Implement scalable and cost-effective solutions</h3>
+                        <h3>Work with hybrid cloud architecture</h3>
+                        <h3>Consult and advise on the choice of appropriate tools</h3>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/clouds.png" class="cloud" alt="">
+                    </div>
+                </div>
+                <img src="images/corner.png" class="corner" alt="">
+            </div>
+            <img src="images/sideLinesRed.svg" alt="">
+        </div>
+
+
+
+
+
+        <!-- <div class="d-flex justify-content-center align-items-center position-relative">
             <img src="images/sideLinesDark.svg" class="img img-fluid" alt="">
             <div class="implements">
                 <div class="info">
@@ -88,11 +113,11 @@
                 </div>
                 <div class="d-flex justify-content-end align-items-end clouds">
                     <img src="images/clouds.png" alt="" class="img img-fluid">
-                    <img src="images/corner.png" alt="" class="img corner" height="30px">
+                    <img src="images/corner.png" alt="" class="img corner position-absolute bottom-0 left-0" height="30px">
                 </div>
             </div>        
         </div>
-        <img src="images/sideLinesRed.svg" class="img img-fluid" alt="">
+        <img src="images/sideLinesRed.svg" class="img img-fluid " alt="">
     </div> -->
         <!-- implementations section end  -->
 
