--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
         <!-- ================================================================= -->
         <!-- services section start  -->
         <!-- ================================================================= -->
+       <div class="card-bg">
         <div class="section-margin container">
-            <h1 class="text-center fw-bold">What we do</h1>
+            <h1 class="text-center padding-y fw-bold">What we do</h1>
             <div class="row cards">
                 <div class="col-md-6 justify-content-center text-center">
                     <img src="images/infrastructure-min.png" class="img-fluid" alt="">
@@ -85,6 +86,7 @@
                 </div>
             </div>
         </div>
+        </div>
         <!-- ================================================================= -->
         <!-- services section end -->
         <!-- ================================================================= -->
@@ -104,7 +106,7 @@
                     <img src="images/clouds-min.png" class="img-fluid cloud" alt="">
                 <img src="images/corner-min.png" class="corner" alt="">
             </div>
-            <img src="images/sideLinesRed.svg" class=" liens"  alt="">
+            <img src="images/sideLinesRed.svg" class="liens"  alt="">
         </div>
         <!-- ================================================================= -->
         <!-- implementations section end  -->
@@ -205,7 +207,6 @@
                 <div class="company-logo">
                     <img src="images/mamba-taxi-min.png" class="img img-fluid" alt="">
                     <div class="over">
-                        <!-- <p>heelo ehis is content</p> -->
                     </div>
                 </div>
                 <div class="company-logo">
@@ -257,18 +258,24 @@
                         <div class="team-heading" >DevOps team</div>
                         <div class="domain-devOps">madops.io</div>
                         <div class="contact">+44 20 3984 8555 </div>
-                        <button class="button border-0 fw-bold ">
+                        <!-- <button class="button-footer border-0 fw-bold ">
+                            ops@meddevs.io
+                        </button> -->
+                        <button class="button button-black border-0 fw-bold ">
                             ops@meddevsio
                         </button>
                     </div>
                     <div class="col-sm-6 bg-red d-flex flex-column justify-content-center align-items-center">
                         <img src="images/shapre-min.png" alt="">
-                        <div class="team-heading">All Team</div>
+                        <div class="team-heading-sec">All Team</div>
                         <div class="domain-devs">maddevs.io</div>
-                        <div class="contact" > +44 20 3984 8555 </div>
-                        <button class="button border-0 fw-bold ">
+                        <div class="contact-sec" > +44 20 3984 8555 </div>
+                        <button class="button-footer border-0 fw-bold ">
                             ops@meddevs.io
                         </button>
+                        <!-- <button class="button-footer border-0 fw-bold ">
+                            ops@meddevs.io
+                        </button> -->
                     </div>
                     <!-- ======================== -->
                     <!-- icons -->
