--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- ================================================================= -->
         <!-- services section start  -->
         <!-- ================================================================= -->
-       <div class="card-bg">
+       <div class="bg-red">
         <div class="section-margin container">
             <h1 class="text-center padding-y fw-bold">What we do</h1>
             <div class="row cards">
