--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mad Ops - DevOps engineers who solve professionally infrastructure problems</title>
+    <title>Xsre Tech - DevOps engineers who solve professionally infrastructure problems</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/titleLogo.png"/>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> -->
@@ -40,7 +40,7 @@
                 <div class="col-sm-8 text-center align-items-center text-header">
                     <p>DevOps engineers who professionally solve infrastructure problems for the teams of developers</p><br>
                     <button class="button border-0 fw-bold ">
-                        ops@meddevs.io
+                        xsre.tech
                     </button>
                     <div class="icons mt-4 d-flex justify-content-center">
                         <i class="bi bi-github"><a href=""></a></i>
@@ -256,22 +256,22 @@
                     <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center">
                         <img src="images/logo-min.png" alt="">
                         <div class="team-heading" >DevOps team</div>
-                        <div class="domain-devOps">madops.io</div>
+                        <div class="domain-devOps">xsre.tech</div>
                         <div class="contact">+44 20 3984 8555 </div>
                         <!-- <button class="button-footer border-0 fw-bold ">
                             ops@meddevs.io
                         </button> -->
                         <button class="button button-black border-0 fw-bold ">
-                            ops@meddevsio
+                            xsre.tech
                         </button>
                     </div>
                     <div class="col-sm-6 bg-red d-flex flex-column justify-content-center align-items-center">
                         <img src="images/shapre-min.png" alt="">
                         <div class="team-heading-sec">All Team</div>
-                        <div class="domain-devs">maddevs.io</div>
+                        <div class="domain-devs">xsre.tech</div>
                         <div class="contact-sec" > +44 20 3984 8555 </div>
                         <button class="button-footer border-0 fw-bold ">
-                            ops@meddevs.io
+                            xsre.tech
                         </button>
                         <!-- <button class="button-footer border-0 fw-bold ">
                             ops@meddevs.io
