--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             
             </div>
                 <div class="footer-text d-flex justify-content-center align-items-center">
-                    © Mad Devs <img src="images/towfinger-min.png" class=" fingers" alt="">  2023
+                    © Xsre Devs <img src="images/towfinger-min.png" class=" fingers" alt="">  2023
                 </div>     
         </div>
         <!-- ================================================================= -->
