--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
                         <div class="tool">
                             <img src="images/Prometheus-min.png" class="img img-fluid" alt="">
                         </div>
+                </div>            
+                <div>
+                    <h1 class="text-center fw-bold mb-4 pb-3" >Our tools</h1>
+
+                <div class="container-fluid d-flex flex-wrap justify-content-center text-center ">
+                
                         <div class="tool">
                             <img src="images/ELK-min.png" class="img img-fluid" alt="">
                         </div>
@@ -154,8 +160,10 @@
                         <div class="tool">
                             <img src="images/CircleCI-min.png" class="img img-fluid" alt="">
                         </div>
+                </div>
+            </div>
+
                                         
-                </div>            
             </div>
         </div>
             <!-- ================================================================= -->
