--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
 
-        <div class="d-flex justify-content-center section-margin">
+        <div class="d-flex section-margin justify-content-center section-margin">
             <img src="images/sideLinesDark.svg" class="liens" alt="">
             <div class="implements-text" >
                     <div>Implement scalable and cost-effective solutions</div>
